seaqt/QtWidgets/gen_qinputdialog.nim

proc fQInputDialog_virtualbase_changeEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_changeEvent".}
proc fcQInputDialog_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_changeEvent".}
proc fQInputDialog_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QInputDialog_virtualbase_metric".}
proc fcQInputDialog_override_virtual_metric(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_metric".}
proc fQInputDialog_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QInputDialog_virtualbase_initPainter".}
proc fcQInputDialog_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_initPainter".}
proc fQInputDialog_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QInputDialog_virtualbase_redirected".}
proc fcQInputDialog_override_virtual_redirected(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_redirected".}
proc fQInputDialog_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QInputDialog_virtualbase_sharedPainter".}
proc fcQInputDialog_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_sharedPainter".}
proc fQInputDialog_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QInputDialog_virtualbase_inputMethodEvent".}
proc fcQInputDialog_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_inputMethodEvent".}
proc fQInputDialog_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QInputDialog_virtualbase_inputMethodQuery".}
proc fcQInputDialog_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_inputMethodQuery".}
proc fQInputDialog_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QInputDialog_virtualbase_focusNextPrevChild".}
proc fcQInputDialog_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_focusNextPrevChild".}
proc fQInputDialog_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_timerEvent".}
proc fcQInputDialog_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_timerEvent".}
proc fQInputDialog_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_childEvent".}
proc fcQInputDialog_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_childEvent".}
proc fQInputDialog_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QInputDialog_virtualbase_customEvent".}
proc fcQInputDialog_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_customEvent".}
proc fQInputDialog_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QInputDialog_virtualbase_connectNotify".}
proc fcQInputDialog_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_connectNotify".}
proc fQInputDialog_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QInputDialog_virtualbase_disconnectNotify".}
proc fcQInputDialog_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QInputDialog_override_virtual_disconnectNotify".}
proc fcQInputDialog_delete(self: pointer) {.importc: "QInputDialog_delete".}


func init*(T: type gen_qinputdialog_types.QInputDialog, h: ptr cQInputDialog): gen_qinputdialog_types.QInputDialog =
  T(h: h)
proc create*(T: type gen_qinputdialog_types.QInputDialog, parent: gen_qwidget_types.QWidget): gen_qinputdialog_types.QInputDialog =
  gen_qinputdialog_types.QInputDialog.init(fcQInputDialog_new(parent.h))

proc create*(T: type gen_qinputdialog_types.QInputDialog, ): gen_qinputdialog_types.QInputDialog =
  gen_qinputdialog_types.QInputDialog.init(fcQInputDialog_new2())

proc create*(T: type gen_qinputdialog_types.QInputDialog, parent: gen_qwidget_types.QWidget, flags: cint): gen_qinputdialog_types.QInputDialog =
  gen_qinputdialog_types.QInputDialog.init(fcQInputDialog_new3(parent.h, cint(flags)))

proc metaObject*(self: gen_qinputdialog_types.QInputDialog, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQInputDialog_metaObject(self.h))

proc metacast*(self: gen_qinputdialog_types.QInputDialog, param1: cstring): pointer =
  fcQInputDialog_metacast(self.h, param1)

proc tr*(_: type gen_qinputdialog_types.QInputDialog, s: cstring): string =
  let v_ms = fcQInputDialog_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setInputMode*(self: gen_qinputdialog_types.QInputDialog, mode: cint): void =
  fcQInputDialog_setInputMode(self.h, cint(mode))

proc inputMode*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  cint(fcQInputDialog_inputMode(self.h))

proc setLabelText*(self: gen_qinputdialog_types.QInputDialog, text: string): void =
  fcQInputDialog_setLabelText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc labelText*(self: gen_qinputdialog_types.QInputDialog, ): string =
  let v_ms = fcQInputDialog_labelText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setOption*(self: gen_qinputdialog_types.QInputDialog, option: cint): void =
  fcQInputDialog_setOption(self.h, cint(option))

proc testOption*(self: gen_qinputdialog_types.QInputDialog, option: cint): bool =
  fcQInputDialog_testOption(self.h, cint(option))

proc setOptions*(self: gen_qinputdialog_types.QInputDialog, options: cint): void =
  fcQInputDialog_setOptions(self.h, cint(options))

proc options*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  cint(fcQInputDialog_options(self.h))

proc setTextValue*(self: gen_qinputdialog_types.QInputDialog, text: string): void =
  fcQInputDialog_setTextValue(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc textValue*(self: gen_qinputdialog_types.QInputDialog, ): string =
  let v_ms = fcQInputDialog_textValue(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setTextEchoMode*(self: gen_qinputdialog_types.QInputDialog, mode: cint): void =
  fcQInputDialog_setTextEchoMode(self.h, cint(mode))

proc textEchoMode*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  cint(fcQInputDialog_textEchoMode(self.h))

proc setComboBoxEditable*(self: gen_qinputdialog_types.QInputDialog, editable: bool): void =
  fcQInputDialog_setComboBoxEditable(self.h, editable)

proc isComboBoxEditable*(self: gen_qinputdialog_types.QInputDialog, ): bool =
  fcQInputDialog_isComboBoxEditable(self.h)

proc setComboBoxItems*(self: gen_qinputdialog_types.QInputDialog, items: seq[string]): void =
  var items_CArray = newSeq[struct_miqt_string](len(items))
  for i in 0..<len(items):
    items_CArray[i] = struct_miqt_string(data: items[i], len: csize_t(len(items[i])))

  fcQInputDialog_setComboBoxItems(self.h, struct_miqt_array(len: csize_t(len(items)), data: if len(items) == 0: nil else: addr(items_CArray[0])))

proc comboBoxItems*(self: gen_qinputdialog_types.QInputDialog, ): seq[string] =
  var v_ma = fcQInputDialog_comboBoxItems(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc setIntValue*(self: gen_qinputdialog_types.QInputDialog, value: cint): void =
  fcQInputDialog_setIntValue(self.h, value)

proc intValue*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  fcQInputDialog_intValue(self.h)

proc setIntMinimum*(self: gen_qinputdialog_types.QInputDialog, min: cint): void =
  fcQInputDialog_setIntMinimum(self.h, min)

proc intMinimum*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  fcQInputDialog_intMinimum(self.h)

proc setIntMaximum*(self: gen_qinputdialog_types.QInputDialog, max: cint): void =
  fcQInputDialog_setIntMaximum(self.h, max)

proc intMaximum*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  fcQInputDialog_intMaximum(self.h)

proc setIntRange*(self: gen_qinputdialog_types.QInputDialog, min: cint, max: cint): void =
  fcQInputDialog_setIntRange(self.h, min, max)

proc setIntStep*(self: gen_qinputdialog_types.QInputDialog, step: cint): void =
  fcQInputDialog_setIntStep(self.h, step)

proc intStep*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  fcQInputDialog_intStep(self.h)

proc setDoubleValue*(self: gen_qinputdialog_types.QInputDialog, value: float64): void =
  fcQInputDialog_setDoubleValue(self.h, value)

proc doubleValue*(self: gen_qinputdialog_types.QInputDialog, ): float64 =
  fcQInputDialog_doubleValue(self.h)

proc setDoubleMinimum*(self: gen_qinputdialog_types.QInputDialog, min: float64): void =
  fcQInputDialog_setDoubleMinimum(self.h, min)

proc doubleMinimum*(self: gen_qinputdialog_types.QInputDialog, ): float64 =
  fcQInputDialog_doubleMinimum(self.h)

proc setDoubleMaximum*(self: gen_qinputdialog_types.QInputDialog, max: float64): void =
  fcQInputDialog_setDoubleMaximum(self.h, max)

proc doubleMaximum*(self: gen_qinputdialog_types.QInputDialog, ): float64 =
  fcQInputDialog_doubleMaximum(self.h)

proc setDoubleRange*(self: gen_qinputdialog_types.QInputDialog, min: float64, max: float64): void =
  fcQInputDialog_setDoubleRange(self.h, min, max)

proc setDoubleDecimals*(self: gen_qinputdialog_types.QInputDialog, decimals: cint): void =
  fcQInputDialog_setDoubleDecimals(self.h, decimals)

proc doubleDecimals*(self: gen_qinputdialog_types.QInputDialog, ): cint =
  fcQInputDialog_doubleDecimals(self.h)

proc setOkButtonText*(self: gen_qinputdialog_types.QInputDialog, text: string): void =
  fcQInputDialog_setOkButtonText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc okButtonText*(self: gen_qinputdialog_types.QInputDialog, ): string =
  let v_ms = fcQInputDialog_okButtonText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCancelButtonText*(self: gen_qinputdialog_types.QInputDialog, text: string): void =
  fcQInputDialog_setCancelButtonText(self.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc cancelButtonText*(self: gen_qinputdialog_types.QInputDialog, ): string =
  let v_ms = fcQInputDialog_cancelButtonText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc minimumSizeHint*(self: gen_qinputdialog_types.QInputDialog, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQInputDialog_minimumSizeHint(self.h))

proc sizeHint*(self: gen_qinputdialog_types.QInputDialog, ): gen_qsize_types.QSize =
  gen_qsize_types.QSize(h: fcQInputDialog_sizeHint(self.h))

proc setVisible*(self: gen_qinputdialog_types.QInputDialog, visible: bool): void =
  fcQInputDialog_setVisible(self.h, visible)

proc getText*(_: type gen_qinputdialog_types.QInputDialog, parent: gen_qwidget_types.QWidget, title: string, label: string): string =
  let v_ms = fcQInputDialog_getText(parent.h, struct_miqt_string(data: title, len: csize_t(len(title))), struct_miqt_string(data: label, len: csize_t(len(label))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
